[project]
name = "langchain-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.21",
    "langchain-openai>=1.1.12",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]
